--- a/views/superadmin/addStudent.hbs
+++ b/views/superadmin/addStudent.hbs
@@ -176,7 +176,7 @@
                 >
                     + Add Student
                 </button>
-                <button 
+                <button a
                     type="submit" 
                     class="btn btn-submit"
                 >
@@ -208,7 +208,7 @@
                     readonly
                 >
                 <input 
-                    type="text" 
+                    type="number" 
                     name="students[${studentCount}][register]" 
                     placeholder="Reg No" 
                     required
